// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Ruler /> should render correctly horizontal ruler 1`] = `
<Fragment>
  <styled.div
    controlSize={12}
    key="0"
    left={0}
    type="horizontal"
  >
    <styled.div
      type="horizontal"
    />
    <styled.div
      type="horizontal"
    >
      0
    </styled.div>
  </styled.div>
  <styled.div
    controlSize={12}
    key="10"
    left={10}
    type="horizontal"
  >
    <styled.div
      type="horizontal"
    />
    <styled.div
      type="horizontal"
    >
      10
    </styled.div>
  </styled.div>
  <styled.div
    controlSize={12}
    key="20"
    left={20}
    type="horizontal"
  >
    <styled.div
      type="horizontal"
    />
    <styled.div
      type="horizontal"
    >
      20
    </styled.div>
  </styled.div>
</Fragment>
`;

exports[`<Ruler /> should render correctly vertical ruler 1`] = `
<Fragment>
  <styled.div
    controlSize={12}
    key="0"
    left={0}
    type="vertical"
  >
    <styled.div
      type="vertical"
    />
    <styled.div
      type="vertical"
    >
      0
    </styled.div>
  </styled.div>
  <styled.div
    controlSize={12}
    key="10"
    left={10}
    type="vertical"
  >
    <styled.div
      type="vertical"
    />
    <styled.div
      type="vertical"
    >
      10
    </styled.div>
  </styled.div>
  <styled.div
    controlSize={12}
    key="20"
    left={20}
    type="vertical"
  >
    <styled.div
      type="vertical"
    />
    <styled.div
      type="vertical"
    >
      20
    </styled.div>
  </styled.div>
</Fragment>
`;
